# everybody.codes

./: .gitignore  Makefile  README.md  justfile  pmd-ruleset.xml  pyproject.toml  requirements.txt
src/main/java/com/github/pareronia/everybody_codes/: Quest02_1.java  Quest2024_01.java  Quest2024_20.java  Quest2025_01.java  Quest2025_02.java  Quest2025_03.java  Quest2025_04.java  Quest2025_05.java  Quest2025_06.java  Quest2025_07.java  Quest2025_08.java  Quest2025_09.java  Quest2025_10.java  Quest2025_11.java  Quest2025_12.java  Quest2025_13.java  Quest2025_14.java  Quest2025_15.java  Quest2025_16.java  Quest2025_17.java  Quest2025_18.java  Quest2025_19.java  Quest2025_20.java
src/main/python/: 2024_01.py  2024_02.py  2024_03.py  2024_04.py  2024_05.py  2024_06.py  2024_07.py  2024_08.py  2024_09.py  2024_10.py  2024_11.py  2024_12.py  2024_13.py  2024_14.py  2024_15.py  2024_16.py  2024_17.py  2024_18.py  2024_19.py  2024_20.py  2025_01.py  2025_02.py  2025_03.py  2025_04.py  2025_05.py  2025_06.py  2025_07.py  2025_08.py  2025_09.py  2025_10.py  2025_11.py  2025_12.py  2025_13.py  2025_14.py  2025_15.py  2025_16.py  2025_17.py  2025_18.py  2025_19.py  2025_20.py  (+4 more)
src/main/python/ec/: __init__.py  api.py  calendar.py  common.py  game_of_life.py  graph.py  math.py  memo.py  search.py
src/main/python/ec/generator/: generator.py
src/main/python/ec/runner/: __main__.py  runner.py
src/main/python/ec/stats/: __main__.py  stats.py
src/main/python/ec/table/: __main__.py  table.py
src/main/resources/generator/: template.py
(+35 files in other folders)
